gen/dfareporting/v3.1/cargo-errors.log
    Checking google-dfareporting3d1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/dfareporting/v3.1/lib)
error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.1/lib/src/lib.rs:21502:63
      |
21502 |             r#type: Option<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                               ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypeItems` in module `crate::resources::ads::params`
     --> dfareporting/v3.1/lib/src/lib.rs:21603:69
      |
21603 |                 value: impl Into<Vec<crate::resources::ads::params::ListTypeItems>>,
      |                                                                     ^^^^^^^^^^^^^ not found in `crate::resources::ads::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.1/lib/src/lib.rs:34949:68
      |
34949 |             types: Option<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                    ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListTypesItems` in module `crate::resources::creatives::params`
     --> dfareporting/v3.1/lib/src/lib.rs:35043:75
      |
35043 |                 value: impl Into<Vec<crate::resources::creatives::params::ListTypesItems>>,
      |                                                                           ^^^^^^^^^^^^^^ not found in `crate::resources::creatives::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.1/lib/src/lib.rs:38483:66
      |
38483 |                 Option<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListEventTagTypesItems` in module `crate::resources::event_tags::params`
     --> dfareporting/v3.1/lib/src/lib.rs:38525:76
      |
38525 |                 value: impl Into<Vec<crate::resources::event_tags::params::ListEventTagTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::event_tags::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.1/lib/src/lib.rs:44149:76
      |
44149 |             directories: Option<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListDirectoriesItems` in module `crate::resources::mobile_apps::params`
     --> dfareporting/v3.1/lib/src/lib.rs:44166:77
      |
44166 |                 value: impl Into<Vec<crate::resources::mobile_apps::params::ListDirectoriesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::mobile_apps::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.1/lib/src/lib.rs:47220:72
      |
47220 |                 Option<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                        ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placement_groups::params`
     --> dfareporting/v3.1/lib/src/lib.rs:47310:82
      |
47310 |                 value: impl Into<Vec<crate::resources::placement_groups::params::ListPricingTypesItems>>,
      |                                                                                  ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placement_groups::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49348:66
      |
49348 |                 Option<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `GeneratetagsTagFormatsItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49371:76
      |
49371 |                 value: impl Into<Vec<crate::resources::placements::params::GeneratetagsTagFormatsItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49804:66
      |
49804 |                 Option<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49817:77
      |
49817 |             pricing_types: Option<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                             ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListCompatibilitiesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49850:76
      |
49850 |                 value: impl Into<Vec<crate::resources::placements::params::ListCompatibilitiesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error[E0412]: cannot find type `ListPricingTypesItems` in module `crate::resources::placements::params`
     --> dfareporting/v3.1/lib/src/lib.rs:49921:76
      |
49921 |                 value: impl Into<Vec<crate::resources::placements::params::ListPricingTypesItems>>,
      |                                                                            ^^^^^^^^^^^^^^^^^^^^^ not found in `crate::resources::placements::params`

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0412`.
error: Could not compile `google-dfareporting3d1`.

To learn more, run the command again with --verbose.
